--- a/SlidingMenu/AndroidManifest.xml
+++ b/SlidingMenu/AndroidManifest.xml
@@ -39,10 +39,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="co.pipevine.core.ViewProfileActivity"
+            android:name="co.pipevine.core.ViewConnectionProfileActivity"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="co.pipevine.core.VIEWPROFILEACTIVITY" />
+                <action android:name="co.pipevine.core.VIEWCONNECTIONPROFILEACTIVITY" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
