--- a/SlidingMenu/bin/AndroidManifest.xml
+++ b/SlidingMenu/bin/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:screenOrientation="portrait"
             android:name="info.androidhive.slidingmenu.MainActivity"
             android:label="@string/app_name" >
             <meta-data
@@ -30,6 +31,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name="co.pipevine.core.Login"
             android:label="@string/app_name" >
             <intent-filter>
