--- a/Vouched/.classpath
+++ b/Vouched/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="libs/socialauth-4.4.jar"/>
 	<classpathentry kind="lib" path="libs/socialauth-android-3.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
