--- a/Vouched/AndroidManifest.xml
+++ b/Vouched/AndroidManifest.xml
@@ -69,6 +69,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+                <activity
+            android:name="co.pipevine.core.Leaderboards"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="co.pipevine.core.LEADERBOARDS" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
