--- a/Vouched/bin/AndroidManifest.xml
+++ b/Vouched/bin/AndroidManifest.xml
@@ -62,16 +62,18 @@
         </activity>
         <activity
             android:name="co.pipevine.core.ViewConnectionProfileActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="co.pipevine.core.VIEWCONNECTIONPROFILEACTIVITY" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-                <activity
+        <activity
             android:name="co.pipevine.core.Leaderboards"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="co.pipevine.core.LEADERBOARDS" />
 
